# duck_shop

./: data.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_temp.py  0003_remove_post_temp.py
blog/templates/blog/: post_confirm_delete.html  post_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill_categories.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_category_description_and_more.py  0003_category_created_at.py  0004_remove_category_created_at.py  0005_alter_product_description.py  0006_request.py  0007_post.py  0008_alter_post_date_alter_product_date_of_creation_and_more.py  0009_post_version.py  0010_remove_post_version.py  0011_product_active_version.py  0012_delete_post.py
catalog/templates/: base.html  contacts.html  create_post.html  detail_post.html  home_page.html  list_of_posts.html  product.html
catalog/templatetags/: custom.py
config/: settings.py  urls.py
mailing_app/: cron.py  email_script.py  forms.py  models.py  urls.py  views.py
mailing_app/migrations/: 0001_initial.py  0002_alter_newsletter_start_time_and_more.py  0002_newsletter.py  0003_newsletter_last_time.py  0003_text.py  0004_alter_logs_date.py  0004_logs.py  0005_newsletter_is_active_newsletter_owner.py  0005_newsletter_message.py  0006_client_owner_id.py  0007_text_owner_id.py  0008_logs_owner_id.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
(+23 files in other folders)
