[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["shurochka <alexa.sazhaeva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
psycopg2-binary = "^2.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
